// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WeeklyActivityChart > snapshot > should match snapshot when rendered with animation class 1`] = `
<div
  class="fade-in"
>
  <div>
    <h2>
      Weekly Activity
    </h2>
    <p>
      Tasks completed per day
    </p>
  </div>
  <div>
    <div
      data-testid="chart-container"
    />
  </div>
  <div
    class="flex-col items-start gap-2 text-sm"
  >
    <div
      data-testid="activity-info-footer"
    >
      Average: 
      10.9
       - Best: 
      Thursday
       (
      20
      )
    </div>
  </div>
</div>
`;

exports[`WeeklyActivityChart > snapshot > should match snapshot when rendered with full week data 1`] = `
<div
  class=""
>
  <div>
    <h2>
      Weekly Activity
    </h2>
    <p>
      Tasks completed per day
    </p>
  </div>
  <div>
    <div
      data-testid="chart-container"
    />
  </div>
  <div
    class="flex-col items-start gap-2 text-sm"
  >
    <div
      data-testid="activity-info-footer"
    >
      Average: 
      10.9
       - Best: 
      Thursday
       (
      20
      )
    </div>
  </div>
</div>
`;

exports[`WeeklyActivityChart > snapshot > should match snapshot when rendered with single day 1`] = `
<div
  class=""
>
  <div>
    <h2>
      Weekly Activity
    </h2>
    <p>
      Tasks completed per day
    </p>
  </div>
  <div>
    <div
      data-testid="chart-container"
    />
  </div>
  <div
    class="flex-col items-start gap-2 text-sm"
  >
    <div
      data-testid="activity-info-footer"
    >
      Average: 
      10.0
       - Best: 
      Monday
       (
      10
      )
    </div>
  </div>
</div>
`;
